--- a/prod.ini
+++ b/prod.ini
@@ -1,5 +1,5 @@
 [app:main]
-paste.app_factory = app:app_factory
+paste.app_factory = wsgi:app_factory
 
 [server:main]
 use = egg:PasteScript#wsgiutils
