--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.14.0",
     "express-logger": "0.0.3",
     "express-session": "^1.13.0",
+    "fast-stats": "0.0.3",
     "jade": "^1.11.0",
     "monk": "^2.1.0",
     "passport": "^0.3.2",
