--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "monk": "^2.1.0",
     "passport": "^0.3.2",
     "passport-reddit": "^0.2.4",
-    "striptags": "^2.1.1"
+    "striptags": "^2.1.1",
+    "supermarked": "^2.0.0"
   }
 }
